--- a/index.html
+++ b/index.html
@@ -9,14 +9,33 @@
 </head>
 
 <body>
-    <article class="container">
+    <nav class="navbar navbar-light bg-light navbar-expand-sm">
+        <a href="/" class="navbar-brand">Whiskey Drop</a>
+        <ul class="navbar-nav mr-auto">
+            <li class="active nav-item mr-2">
+                <a class= "nav-link" href="/">Home</a>
+            </li>
+            <li class="nav-item mr-2">
+                <a class= "nav-link" href="/about">About</a>
+            </li>
+            <li class="nav-item mr-2 d-block d-md-none">
+                <a class= "nav-link" href="/login">Sign in / Sign up</a>
+            </li>
+        </ul>
+        <div class="d-none d-md-block">
+            <p class="navbar-text my-auto mr-2"> <i>Great whiskey delivered to your door!</i></p>
+            <a href="/login">Sign in/ Sign up</a>
+        </div>
+    </nav>
+    <article class="container mt-3">
         <!-- Callout -->
-        <section class="callout">
+        <section class="callout jumbotron text-center">
             <div class="row">
                 <div class="col-12">
             <h1>The finest whiskeys delivered to your doorstep.</h1>
             <p class="lead">Sign up today to start receiving the world's best whiskeys every month. 
-                <s>£19.99</s> <strong><mark>First one is free!</mark></strong></p>
+                <s class="d-none d-sm-inline">£19.99</s> 
+                <span class="d-inline d-sm-none"><br></span><strong><mark>First one is free!</mark></strong></p>
                 <button class="btn btn-success btn-lg">Sign up!</button>
                 <p class="text-muted"><small>You must be over 18, please drink responsibly.</small></p>
             </div>
@@ -28,7 +47,7 @@
         <!-- Quotes -->
         <section class="quotes">
             <div class="row">
-                <div class="col-12 col-md-6">
+                <div class="col-12 col-my-5">
                     <h2 class="text-uppercase">Quotes:</h2>
                 </div>
             </div>
@@ -52,7 +71,7 @@
         <!-- Features -->
         <section class="features">
             <div class="row">
-                <div class="col-12">
+                <div class="col-12 my-5">
             <h2 class="text-uppercase">Features:</h2>
                 </div>
             </div>
