--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en-us">
+
 <head>
     <meta charset="utf-8">
-    
+
     <title>Whiskey Drop | Taste a new whiskey every month</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <script src="https://kit.fontawesome.com/8e896d3229.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -13,13 +15,13 @@
         <a href="/" class="navbar-brand">Whiskey Drop</a>
         <ul class="navbar-nav mr-auto">
             <li class="active nav-item mr-2">
-                <a class= "nav-link" href="/">Home</a>
+                <a class="nav-link" href="/">Home</a>
             </li>
             <li class="nav-item mr-2">
-                <a class= "nav-link" href="/about">About</a>
+                <a class="nav-link" href="/about">About</a>
             </li>
             <li class="nav-item mr-2 d-block d-md-none">
-                <a class= "nav-link" href="/login">Sign in / Sign up</a>
+                <a class="nav-link" href="/login">Sign in / Sign up</a>
             </li>
         </ul>
         <div class="d-none d-md-block">
@@ -28,19 +30,27 @@
         </div>
     </nav>
     <article class="container mt-3">
+        <div class="row d-none d-sm-block">
+            <div class="col-12">
+                <div class="alert alert-warning">
+                    <strong>Sale Now On!</strong> We've got a sale on. 12 months for the price of 6!
+                    <a href="">See here for details!</a>
+                </div>
+            </div>
+        </div>
         <!-- Callout -->
         <section class="callout jumbotron text-center">
             <div class="row">
                 <div class="col-12">
-            <h1>The finest whiskeys delivered to your doorstep.</h1>
-            <p class="lead">Sign up today to start receiving the world's best whiskeys every month. 
-                <s class="d-none d-sm-inline">£19.99</s> 
-                <span class="d-inline d-sm-none"><br></span><strong><mark>First one is free!</mark></strong></p>
-                <button class="btn btn-success btn-lg">Sign up!</button>
-                <p class="text-muted"><small>You must be over 18, please drink responsibly.</small></p>
+                    <h1>The finest whiskeys delivered to your doorstep.</h1>
+                    <p class="lead">Sign up today to start receiving the world's best whiskeys every month.
+                        <s class="d-none d-sm-inline">£19.99</s>
+                        <span class="d-inline d-sm-none"><br></span><strong><mark>First one is free!</mark></strong></p>
+                    <button class="btn btn-success btn-lg">Sign up!</button>
+                    <p class="text-muted"><small>You must be over 18, please drink responsibly.</small></p>
+                </div>
             </div>
-            </div>
-            </section>
+        </section>
         <!-- /.callout -->
         <hr>
 
@@ -53,16 +63,34 @@
             </div>
             <div class="row">
                 <div class="col-12 col-md-6">
-                    <blockquote class="blockquote">
-                        <p>I've been introduced to more than 10 great international whiskeys I never knew about.</p>
-                        <p>- Jane Doe</p>
-                    </blockquote>
+                    <div class="media">
+                        <div class="d-none d-sm-block">
+                            <img src="images/girl-image.png" alt="Image of a girl" class="rounded-circle mr-3"
+                                height="100" width="100">
+                        </div>
+                        <div class="media-body">
+                            <blockquote class="blockquote">
+                                <p>I've been introduced to more than 10 great international whiskeys I never knew about.
+                                </p>
+                                <p>- Jane Doe</p>
+                            </blockquote>
+                        </div>
+                    </div>
+
                 </div>
                 <div class="col-12 col-md-6">
-                    <blockquote class="blockquote">
-                        <p>I haven't been sober for months!</p>
-                        <p>- Jane Doe</p>
-                    </blockquote>
+                    <div class="media">
+                        <div class="d-none d-sm-block">
+                            <img src="images/guy-image.png" alt="Image of a girl" class="rounded-circle mr-3"
+                                height="100" width="100">
+                        </div>
+                        <div class="media-body">
+                            <blockquote class="blockquote">
+                                <p>I haven't been sober for months!</p>
+                                <p>- Jane Doe</p>
+                            </blockquote>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -72,32 +100,38 @@
         <section class="features">
             <div class="row">
                 <div class="col-12 my-5">
-            <h2 class="text-uppercase">Features:</h2>
+                    <h2 class="text-uppercase">Features:</h2>
                 </div>
             </div>
             <div class="row">
                 <div class="col-12 col-md-6 col-lg-4">
-            <div class="feature">
-                <h3>Feature 1</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-            </div>
-            <p><a class="btn btn-light btn-sm" href="">Read More</a></p>
-            </div>
-            <div class="col-12 col-md-6 col-lg-4">
-            <div class="feature">
-                <h3>Feature 2</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-            </div>
-            <p><a class="btn btn-light btn-sm" href="">Read More</a></p>
-            </div>
-            <div class="col-12 d-md-none d-lg-block col-lg-4">
-            <div class="feature">
-                <h3>Feature 3</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-            </div>
-            <p><a class="btn btn-light btn-sm" href="">Read More</a></p>
-            </div>
+                    <div class="feature">
+                        <h3><i class="fa-solid fa-gift d-none d-sm-inline"></i> Feature 1 <span class="badge badge-success">NEW!</span></h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                            laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    </div>
+                    <p><a class="btn btn-light btn-sm" href="">Read More</a></p>
                 </div>
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="feature">
+                        <h3><i class="fa-solid fa-credit-card d-none d-sm-inline"></i> Feature 2</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                            laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    </div>
+                    <p><a class="btn btn-light btn-sm" href="">Read More</a></p>
+                </div>
+                <div class="col-12 d-md-none d-lg-block col-lg-4">
+                    <div class="feature">
+                        <h3><i class="fa-solid fa-circle-xmark d-none d-sm-inline"></i> Feature 3</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                            laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    </div>
+                    <p><a class="btn btn-light btn-sm" href="">Read More</a></p>
+                </div>
+            </div>
             </div>
         </section>
         <!-- /.features -->
