--- a/index.html
+++ b/index.html
@@ -13,20 +13,39 @@
 <body>
     <nav class="navbar navbar-light bg-light navbar-expand-sm">
         <a href="/" class="navbar-brand">Whiskey Drop</a>
-        <ul class="navbar-nav mr-auto">
-            <li class="active nav-item mr-2">
-                <a class="nav-link" href="/">Home</a>
-            </li>
-            <li class="nav-item mr-2">
-                <a class="nav-link" href="/about">About</a>
-            </li>
-            <li class="nav-item mr-2 d-block d-md-none">
-                <a class="nav-link" href="/login">Sign in / Sign up</a>
-            </li>
-        </ul>
+
+        <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+            aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+
+            <ul class="navbar-nav mr-auto">
+                <li class="active nav-item mr-2">
+                    <a class="nav-link" href="/">Home</a>
+                </li>
+                <li class="nav-item mr-2">
+                    <a class="nav-link" href="/about">About</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="navc-link dropdown-toggle" href="#" id="navbarNavDropdownMenuLink" role="button" data-toggle="dropdown"
+                    aria-haspopup="true" aria-expanded="false">
+                Whiskeys</a>
+                <div class="dropdown-menu" aria-labelledby="navbarNavDropdownMenuLink">
+                    <a class="dropdown-item" href="#">Irish</a>
+                    <a class="dropdown-item" href="#">Scotch</a>
+                    <a class="dropdown-item" href="#">Japanese</a>
+                    <a class="dropdown-item" href="#">American</a>
+                </div>
+                </li>
+                <li class="nav-item mr-2 d-block d-md-none">
+                    <a class="nav-link" href="/login">Sign in / Sign up</a>
+                </li>
+            </ul>
+        </div>
         <div class="d-none d-md-block">
             <p class="navbar-text my-auto mr-2"> <i>Great whiskey delivered to your door!</i></p>
-            <a href="/login">Sign in/ Sign up</a>
+            <a href="/login">Sign in / Sign up</a>
         </div>
     </nav>
     <article class="container mt-3">
@@ -106,7 +125,8 @@
             <div class="row">
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="feature">
-                        <h3><i class="fa-solid fa-gift d-none d-sm-inline"></i> Feature 1 <span class="badge badge-success">NEW!</span></h3>
+                        <h3><i class="fa-solid fa-gift d-none d-sm-inline"></i> Feature 1 <span
+                                class="badge badge-success">NEW!</span></h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                             labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
                             laboris nisi ut aliquip ex ea commodo consequat.</p>
@@ -136,6 +156,18 @@
         </section>
         <!-- /.features -->
     </article>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"
+        integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous">
+    </script>
 </body>
 
 </html>
